GMTGAN-47 added profile for being seen, fixed button in signin.

--- a/BeingSeenApp/app/src/main/res/layout/activity_org_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_org_user_profile_view_balance.xml
@@ -140,7 +140,7 @@
         app:layout_constraintVertical_bias="0.83" />
 
     <Button
-        android:id="@+id/aboutusBtn"
+        android:id="@+id/orgAboutusBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="About Us"
