--- a/BeingSeenApp/app/src/main/res/layout/activity_bs_user_profile_view_donation.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_bs_user_profile_view_donation.xml
@@ -4,14 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".DonorUiFrontend.DnUserProfileViewBalanceActivity">
-
+    tools:context=".BeingSeenUiFrontend.BsUserProfileViewDonationActivity">
     <RelativeLayout
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@color/green"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginBottom="300px"
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
     </RelativeLayout>
 
@@ -31,7 +32,7 @@
 
 
     <Button
-        android:id="@+id/DnEditPfButton"
+        android:id="@+id/BsEditPfButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Edit"
@@ -43,7 +44,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/DnContentButton"
+        android:id="@+id/BsContentButton"
         android:layout_width="110dp"
         android:layout_height="50dp"
         android:text="Content Page"
@@ -58,7 +59,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/DnPfLogoutButton"
+        android:id="@+id/BsPfLogoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Logout"
@@ -69,20 +70,8 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
 
-    <Button
-        android:id="@+id/donateToSomeone"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Send a donation"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.869" />
-
     <TextView
-        android:id="@+id/DnPfUnameDisplay"
+        android:id="@+id/BsPfUnameDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
@@ -96,7 +85,7 @@
         />
 
     <TextView
-        android:id="@+id/DnPfUdescDisplay"
+        android:id="@+id/BsPfUdescDisplay"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
@@ -114,6 +103,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Balance"
+        android:checked="true"
         tools:layout_editor_absoluteX="120dp"
         tools:layout_editor_absoluteY="441dp"
         app:layout_constraintHorizontal_bias="0.4"
@@ -138,60 +128,13 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <TextView
-        android:id="@+id/dnPfBalance"
-        android:layout_width="200dp"
-        android:layout_height="81dp"
-        android:text="N/A"
-        android:textSize="70dp"
-        android:textColor="@color/green"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/bs_donations_recycler_view"
+        android:layout_width="410dp"
+        android:layout_height="180dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
-
-    <TextView
-        android:id="@+id/textCreditUnit"
-        android:layout_width="122dp"
-        android:layout_height="81dp"
-        android:text="Credit(s) to give"
-        android:textSize="20dp"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.83" />
-
-    <Button
-        android:id="@+id/AboutusBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="About Us"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.95" />
-
-    <ImageButton
-        android:id="@+id/searchButton"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:layout_marginStart="16dp"
-        android:backgroundTint="@color/green"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.763"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.939"
-        app:srcCompat="?android:attr/actionModeWebSearchDrawable"
-        tools:ignore="SpeakableTextPresentCheck" />
-
-
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.989" />
 </androidx.constraintlayout.widget.ConstraintLayout>
