--- a/BeingSeenApp/app/src/main/res/layout/activity_main.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_main.xml
@@ -86,4 +86,15 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.127" />
 
+    <Button
+        android:id="@+id/hyProfileTest"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="69dp"
+        android:text="Button"
+        app:layout_constraintBottom_toTopOf="@+id/nav_view"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/SignUpButton" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
