--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_content_page_card.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_content_page_card.xml
@@ -12,7 +12,7 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="255dp"
+        android:layout_height="225dp"
         android:padding="16dp"
         >
 
@@ -51,10 +51,21 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/goalTitle"
             android:layout_marginStart="0dp"
-            android:layout_marginTop="21dp"
+            android:layout_marginTop="0dp"
+            android:text="progress"
+            android:textColor="@color/black"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/percentage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/goalTitle"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="28dp"
             android:text="percentage"
             android:textColor="@color/black"
-            android:textSize="20sp" />
+            android:textSize="15sp" />
 
         <ProgressBar
             android:id="@+id/progressBar"
@@ -62,20 +73,21 @@
             android:layout_width="395dp"
             android:layout_height="40dp"
             android:layout_below="@id/goalTitle"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="16dp"
-            android:layout_toEndOf="@id/progress"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="3dp"
+            android:layout_toEndOf="@id/proPic"
             android:progressTint="@color/green" />
 
         <TextView
             android:id="@+id/gDescription"
             android:layout_width="395dp"
-            android:layout_height="80dp"
+            android:layout_height="30dp"
             android:layout_below="@id/progressBar"
+            android:layout_marginTop="10dp"
             android:layout_alignParentBottom="true"
             android:text="description"
             android:textColor="@color/black"
-            android:textSize="20sp" />
+            android:textSize="18sp" />
 
     </RelativeLayout>
 
