--- a/BeingSeenApp/app/src/main/res/layout/activity_mer_user_profile_view_donation.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_mer_user_profile_view_donation.xml
@@ -4,14 +4,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MerchantUiFrontend.MerUserProfileViewBalanceActivity">
+    tools:context=".MerchantUiFrontend.MerUserProfileViewDonationActivity">
 
     <RelativeLayout
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@color/green"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_marginBottom="300px"
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
     </RelativeLayout>
 
@@ -102,6 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Balance"
+        android:checked="true"
         tools:layout_editor_absoluteX="120dp"
         tools:layout_editor_absoluteY="441dp"
         app:layout_constraintHorizontal_bias="0.4"
@@ -126,44 +129,14 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <TextView
-        android:id="@+id/merPfBalance"
-        android:layout_width="200dp"
-        android:layout_height="81dp"
-        android:text="N/A"
-        android:textSize="70dp"
-        android:textColor="@color/green"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/mer_donations_recycler_view"
+        android:layout_width="410dp"
+        android:layout_height="180dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
-
-    <TextView
-        android:id="@+id/textCreditUnit"
-        android:layout_width="122dp"
-        android:layout_height="81dp"
-        android:text="Credit(s) to give"
-        android:textSize="20dp"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.83" />
-
-    <Button
-        android:id="@+id/AboutusBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="About Us"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.288"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.897" />
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.989" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
