--- a/BeingSeenApp/app/src/main/res/menu/dn_nav_menu.xml
+++ b/BeingSeenApp/app/src/main/res/menu/dn_nav_menu.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/profile"
+        android:id="@+id/dn_profile"
         android:title="Profile"
-        android:ico="@drawable/ic_profile_icon"/>
+        android:icon="@drawable/ic_profile_icon"/>
 
 <!--    <item-->
 <!--        android:id="@+id/profile"-->
 <!--        android:title="Profile"-->
-<!--        android:ico="@drawable/ic_profile_icon"/>-->
+<!--        android:icon="@drawable/ic_profile_icon"/>-->
 </menu>
