--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_main_navbar.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_main_navbar.xml
@@ -21,12 +21,14 @@
     <fragment
         android:id="@+id/fragmentContainerView"
         android:name="androidx.navigation.fragment.NavHostFragment"
-        android:layout_width="409dp"
-        android:layout_height="667dp"
+        android:layout_width="411dp"
+        android:layout_height="612dp"
         app:defaultNavHost="true"
         app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.285"
         app:navGraph="@navigation/dn_navigation" />
 </androidx.constraintlayout.widget.ConstraintLayout>
