--- a/BeingSeenApp/app/src/main/res/menu/dn_nav_menu.xml
+++ b/BeingSeenApp/app/src/main/res/menu/dn_nav_menu.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
+        android:id="@+id/dn_search"
+        android:title="Search For Youth"
+        android:icon="@drawable/ic_baseline_person_search_24"
+        android:label="Search For Youth To Donate To"/>
+
+    <item
         android:id="@+id/dn_profile"
         android:title="Profile"
         android:icon="@drawable/ic_profile_icon"/>
-
-<!--    <item-->
-<!--        android:id="@+id/profile"-->
-<!--        android:title="Profile"-->
-<!--        android:icon="@drawable/ic_profile_icon"/>-->
 </menu>
