--- a/BeingSeenApp/app/src/main/res/navigation/dn_navigation.xml
+++ b/BeingSeenApp/app/src/main/res/navigation/dn_navigation.xml
@@ -3,11 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dn_navigation"
-    app:startDestination="@id/Profile">
+    app:startDestination="@id/dn_profile">
 
     <fragment
-        android:id="@+id/Profile"
+        android:id="@+id/dn_profile"
         android:name="com.example.myapplication.DonorUiFrontend.DnUserProfileViewBalanceFragment"
         android:label="fragment_dn_user_profile_view_balance"
         tools:layout="@layout/fragment_dn_user_profile_view_balance" />
+    <fragment
+        android:id="@+id/dn_search"
+        android:name="com.example.myapplication.SearchUI.SearchPageFragment"
+        android:label="fragment_search_page"
+        tools:layout="@layout/fragment_search_page" />
 </navigation>
