--- a/BeingSeenApp/app/src/main/res/navigation/dn_navigation.xml
+++ b/BeingSeenApp/app/src/main/res/navigation/dn_navigation.xml
@@ -15,4 +15,9 @@
         android:name="com.example.myapplication.SearchUI.SearchPageFragment"
         android:label="fragment_search_page"
         tools:layout="@layout/fragment_search_page" />
+    <fragment
+        android:id="@+id/dn_content"
+        android:name="com.example.myapplication.DonorUiFrontend.DnContentPageFragment"
+        android:label="fragment_dn_content_page"
+        tools:layout="@layout/fragment_dn_content_page" />
 </navigation>
