--- a/BeingSeenApp/app/src/main/res/menu/org_nav_menu.xml
+++ b/BeingSeenApp/app/src/main/res/menu/org_nav_menu.xml
@@ -16,4 +16,9 @@
         android:title="Profile"
         android:icon="@drawable/ic_profile_icon"
         android:label="Profile"/>
+    <item
+        android:id="@+id/transaction_history"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:label="Transaction History"
+        android:title="Transaction History" />
 </menu>
