GMTGAN-129 Update navbar for youth transaction to merchant

--- a/BeingSeenApp/app/src/main/res/menu/hy_nav_menu.xml
+++ b/BeingSeenApp/app/src/main/res/menu/hy_nav_menu.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
-        android:id="@+id/hy_search"
-        android:title="Search For Merchant"
+        android:id="@+id/hy_send_money"
+        android:title="Shopping"
         android:icon="@drawable/ic_baseline_person_search_24"
-        android:label="Search For Merchant"/>
+        android:label="Shopping"/>
 
 
     <item
