--- a/BeingSeenApp/app/src/main/res/navigation/hy_navigation.xml
+++ b/BeingSeenApp/app/src/main/res/navigation/hy_navigation.xml
@@ -11,8 +11,8 @@
         android:label="fragment_hy_user_profile_view_balance"
         tools:layout="@layout/fragment_hy_user_profile_view_balance" />
     <fragment
-        android:id="@+id/hy_search"
-        android:name="com.example.myapplication.HomelessYouthUiFrontend.HySetDonationGoalFragment"
-        android:label="fragment_set_donation_goal"
-        tools:layout="@layout/fragment_set_donation_goal" />
+        android:id="@+id/hy_send_money"
+        android:name="com.example.myapplication.HomelessYouthUiFrontend.HySendMoneyFragment"
+        android:label="fragment_send_money"
+        tools:layout="@layout/fragment_send_money" />
 </navigation>
