--- a/BeingSeenApp/app/src/main/res/layout/fragment_bs_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_bs_user_profile_view_balance.xml
@@ -43,7 +43,7 @@
 
 
     <Button
-        android:id="@+id/DnEditPfButton"
+        android:id="@+id/BsEditPfButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Edit"
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/DnContentButton"
+        android:id="@+id/BsContentButton"
         android:layout_width="110dp"
         android:layout_height="50dp"
         android:text="Content Page"
@@ -70,7 +70,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/DnPfLogoutButton"
+        android:id="@+id/BsPfLogoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Logout"
@@ -94,7 +94,7 @@
         app:layout_constraintVertical_bias="0.869" />
 
     <TextView
-        android:id="@+id/DnPfUnameDisplay"
+        android:id="@+id/BsPfUnameDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
@@ -108,7 +108,7 @@
         />
 
     <TextView
-        android:id="@+id/DnPfUdescDisplay"
+        android:id="@+id/BsPfUdescDisplay"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
@@ -151,7 +151,7 @@
         />
 
     <TextView
-        android:id="@+id/dnPfBalance"
+        android:id="@+id/bsPfBalance"
         android:layout_width="200dp"
         android:layout_height="81dp"
         android:text="N/A"
