--- a/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_dn_user_profile_view_balance.xml
@@ -167,7 +167,7 @@
         app:layout_constraintVertical_bias="0.83" />
 
     <Button
-        android:id="@+id/aboutusBtn"
+        android:id="@+id/AboutusBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="About Us"
