--- a/BeingSeenApp/app/src/main/res/layout/activity_org_user_profile_view_donation.xml
+++ b/BeingSeenApp/app/src/main/res/layout/activity_org_user_profile_view_donation.xml
@@ -4,37 +4,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomelessYouthUiFrontend.HyUserProfileViewBalanceActivity">
-
+    tools:context=".OrganizationUiFrontend.OrgUserProfileViewDonationActivity">
     <RelativeLayout
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
         android:background="@color/green"
+        android:layout_marginBottom="300px"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
-
-        <Button
-            android:id="@+id/delete_donation_goal"
-            android:layout_width="110dp"
-            android:layout_height="65dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="296dp"
-            android:layout_marginTop="68dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="67dp"
-            android:gravity="left"
-            android:text="Delete Donation Goal"
-            android:textAlignment="gravity"
-            android:textSize="12dp" />
+        >
 
     </RelativeLayout>
 
     <ImageView
-        android:id="@+id/HyPfPfpDisplay"
+        android:id="@+id/imageView"
         android:layout_width="150dp"
         android:layout_height="200dp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -49,7 +32,7 @@
 
 
     <Button
-        android:id="@+id/HyEditPfButton"
+        android:id="@+id/OrgEditPfButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Edit"
@@ -61,23 +44,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/SetGoal"
-        android:layout_width="110dp"
-        android:layout_height="65dp"
-        android:text="Set Donation Goal"
-        android:textSize="12dp"
-        android:gravity="left"
-        android:textAlignment="gravity"
-        app:layout_constraintHorizontal_bias="0.02"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <Button
-        android:id="@+id/HyPfLogoutButton"
+        android:id="@+id/OrgPfLogoutButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Logout"
@@ -89,7 +56,7 @@
         app:layout_constraintVertical_bias="0.01" />
 
     <TextView
-        android:id="@+id/HyPfUnameDisplay"
+        android:id="@+id/OrgPfUnameDisplay"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
@@ -103,7 +70,7 @@
         />
 
     <TextView
-        android:id="@+id/HyPfUdescDisplay"
+        android:id="@+id/OrgPfUdescDisplay"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         app:layout_constraintHorizontal_bias="0.5"
@@ -121,6 +88,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Balance"
+        android:checked="true"
         tools:layout_editor_absoluteX="120dp"
         tools:layout_editor_absoluteY="441dp"
         app:layout_constraintHorizontal_bias="0.4"
@@ -145,33 +113,13 @@
         app:layout_constraintTop_toTopOf="parent"
         />
 
-    <TextView
-        android:id="@+id/hyPfBalance"
-        android:layout_width="200dp"
-        android:layout_height="81dp"
-        android:text="N/A"
-        android:textSize="70dp"
-        android:textColor="@color/green"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/org_donations_recycler_view"
+        android:layout_width="410dp"
+        android:layout_height="180dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.25"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.75" />
-
-    <TextView
-        android:id="@+id/textCreditUnit"
-        android:layout_width="122dp"
-        android:layout_height="81dp"
-        android:text="Credit(s) to spend"
-        android:textSize="20dp"
-        android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.9"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.83" />
-
-
+        app:layout_constraintTop_toTopOf="@+id/textView"
+        app:layout_constraintVertical_bias="0.989" />
 </androidx.constraintlayout.widget.ConstraintLayout>
