--- a/BeingSeenApp/app/src/main/res/layout/fragment_hy_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_hy_user_profile_view_balance.xml
@@ -1,37 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".HomelessYouthUiFrontend.HyUserProfileViewBalanceActivity">
+    tools:context=".HomelessYouthUiFrontend.HyUserProfileViewBalanceFragment">
 
-    <RelativeLayout
-        android:id="@+id/textView"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:background="@color/green"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
-
-        <Button
-            android:id="@+id/delete_donation_goal"
-            android:layout_width="110dp"
-            android:layout_height="65dp"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="296dp"
-            android:layout_marginTop="68dp"
-            android:layout_marginEnd="5dp"
-            android:layout_marginBottom="67dp"
-            android:gravity="left"
-            android:text="Delete Donation Goal"
-            android:textAlignment="gravity"
-            android:textSize="12dp" />
-
-    </RelativeLayout>
 
     <ImageView
         android:id="@+id/HyPfPfpDisplay"
@@ -60,21 +35,6 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <Button
-        android:id="@+id/SetGoal"
-        android:layout_width="110dp"
-        android:layout_height="65dp"
-        android:text="Set Donation Goal"
-        android:textSize="12dp"
-        android:gravity="left"
-        android:textAlignment="gravity"
-        app:layout_constraintHorizontal_bias="0.02"
-        app:layout_constraintVertical_bias="0.1"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
 
     <Button
         android:id="@+id/HyPfLogoutButton"
@@ -87,6 +47,36 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.01" />
+
+    <Button
+        android:id="@+id/SetGoal"
+        android:layout_width="110dp"
+        android:layout_height="65dp"
+        android:text="Set a Goal"
+        android:textSize="12dp"
+        android:gravity="left"
+        android:textAlignment="gravity"
+        app:layout_constraintHorizontal_bias="0.02"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/delete_donation_goal"
+        android:layout_width="110dp"
+        android:layout_height="65dp"
+        android:text="Delete a goal"
+        android:gravity="right"
+        android:textAlignment="gravity"
+        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintVertical_bias="0.1"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:textSize="12dp" />
 
     <TextView
         android:id="@+id/HyPfUnameDisplay"
@@ -172,6 +162,5 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.83" />
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
