GMTGAN-150 added transaction history and progress bar for content page

--- a/BeingSeenApp/app/src/main/res/layout/fragment_dn_content_page.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_dn_content_page.xml
@@ -1,35 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".DonorUiFrontend.DnContentPageFragment">
 
-    <RelativeLayout
-        android:id="@+id/stickyLayout"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:background="@color/green"
+    <TextView
+        android:id="@+id/content_page_txt"
+        android:layout_width="349dp"
+        android:layout_height="72dp"
+        android:text="Content Page"
+        android:textSize="34sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp">
-
-        <TextView
-            android:id="@+id/title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
-            android:text="Content Page"
-            android:textColor="@color/white"
-            android:textSize="30dp" />
-    </RelativeLayout>
+        app:layout_constraintVertical_bias="0.024" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:ignore="MissingConstraints" />
+        android:id="@+id/content_page_recycler_view"
+        android:layout_width="391dp"
+        android:layout_height="568dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/content_page_txt" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
