--- a/BeingSeenApp/app/src/main/res/layout/fragment_dn_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_dn_user_profile_view_balance.xml
@@ -11,21 +11,22 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/green"
+        android:background="@color/teal_700"
         app:layout_constraintTop_toTopOf="parent">
 
-        <Button
-            android:id="@+id/aboutusBtn"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentEnd="true"
-            android:layout_marginStart="296dp"
-            android:layout_marginTop="65dp"
-            android:layout_marginEnd="7dp"
-            android:text="About Us" />
     </RelativeLayout>
+
+    <Button
+        android:id="@+id/aboutusBtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintHorizontal_bias="0.98"
+        app:layout_constraintVertical_bias="0.2"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:text="About Us" />
 
     <ImageView
         android:id="@+id/imageView"
