--- a/BeingSeenApp/app/src/main/res/layout/fragment_mer_user_profile_view_balance.xml
+++ b/BeingSeenApp/app/src/main/res/layout/fragment_mer_user_profile_view_balance.xml
@@ -11,7 +11,7 @@
         android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:background="@color/green"
+        android:background="@color/teal_700"
         app:layout_constraintTop_toTopOf="parent">
 
     </RelativeLayout>
