--- a/BeingSeenApp/app/src/main/res/menu/hy_nav_menu.xml
+++ b/BeingSeenApp/app/src/main/res/menu/hy_nav_menu.xml
@@ -18,4 +18,9 @@
         android:icon="@drawable/ic_notifications_black_24dp"
         android:label="Transaction History"
         android:title="Transaction History" />
+    <item
+        android:id="@+id/donation_goal"
+        android:icon="@drawable/ic_baseline_add_circle_24"
+        android:label="Donation Goal"
+        android:title="Donation Goal" />
 </menu>
